feat: POS system initial setup
